HEEDLS-533 Fix layout issues at small desktop sizes

--- a/DigitalLearningSolutions.Web/Styles/shared/searchableElements/filter.scss
+++ b/DigitalLearningSolutions.Web/Styles/shared/searchableElements/filter.scss
@@ -7,7 +7,11 @@
     width: 63%;
   }
 
-  @include mq($from: desktop) {
+  @include mq($from: tablet) {
+    width: 63%;
+  }
+
+  @include mq($from: $xl-desktop) {
     .js-enabled & {
       width: 74%;
     }
